CTrackUAT/src/objects/Customer_Master__c.object
<CustomObject>
    <fields>
        <fullName>CUST_GROUP__c</fullName>
        <label>CUST_GROUP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>CHERMSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHITTAGONG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHANMONDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYLHET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KALABAGAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THIMPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THIMPHU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>²`¦`</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUMBRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PORT BLAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANANTAPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGAUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHIMAVARAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUNTUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDERABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAKINADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KURNOOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NELLORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIZAMABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJAMUNDRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TENALI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIRUPATHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRICHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIVANDRUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIJAYAWADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISAKHAPATNAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brabant (Flemish)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>??¬Ù</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Yorkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra &amp; Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SALES_DIST__c</fullName>
        <label>SALES_DIST</label>
        <picklist>
            <picklistValues>
                <fullName>INWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INBANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INBHUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSOUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INMALD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNEPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INAFFI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>SALES_DIST__c</columns>
        <columns>Region__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customers_in_INWEST</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>SALES_DIST__c</columns>
        <columns>Region__c</columns>
        <columns>CUST_GROUP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SALES_DIST__c</field>
            <operation>equals</operation>
            <value>INWEST</value>
        </filters>
        <label>Customers in INWEST</label>
    </listViews>
    <nameField>
        <label>SAP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>